--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,27 @@
 
-/* Your CSS Code here. */
+/* Your CSS Code here. 
+<!DOCTYPE html>
+
+<html>
+
+<head>
+	<link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+	<!-- the entire body must be written by student -->
+	<button id="button-1" class="btn btn-primary">Button-1</button>
+	<button id="button-2" class="btn btn-outline-secondary">Button-2</button>
+	<button id="button-3" class="btn btn-success btn-lg">Button-3</button>
+	<button id="button-4" class="btn btn-danger btn-sm">Button-4</button>
+	<button id="button-5" class="btn btn-warning btn-lg btn-block">Button-5</button>
+	<button id="button-6" class="btn btn-info disabled">Button-6</button>
+	<button id="button-7" class="btn btn-light">Button-7</button>
+	<button id="button-8" class="btn btn-link">Button-8</button>
+    <script type="text/javascript" src="./script.js">
+</script>
+
+</body>
+
+</html>
+*/
